<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="eg.intercom.hrss.activities.PersonActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">







<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/emp_code"
        android:textSize="20sp"
        android:textColor="@android:color/holo_blue_dark"
        android:id="@+id/emp_id" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textColor="@android:color/holo_blue_dark"
        android:id="@+id/emp_code"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/ar_name"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"
            android:id="@+id/arabic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textColor="#333"
            android:id="@+id/arabic_name"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/en_name"
                android:id="@+id/eng_name"
                android:textColor="#333"
                android:textColorHint="#666"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ar_short"
                android:textColor="#333"
                android:id="@+id/arabic_short"
                android:textColorHint="#666"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/en_short"
                android:text="id"
                android:id="@+id/eng_short"
                android:textColor="#333"
                android:textColorHint="#666"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/birth"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"
            android:id="@+id/birth" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textColor="#333"
            android:id="@+id/birth_date"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"
            android:id="@+id/job" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textColor="#333"
            android:id="@+id/job_title"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/hiring"
            android:id="@+id/hiring" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#333"
            android:text=""
            android:id="@+id/hiring_date"
            />
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/mng_name"
        android:id="@+id/direct" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#333"
        android:text=""
        android:id="@+id/direct_manager"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/dpt_name"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"
            android:id="@+id/department" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textColor="#333"
            android:id="@+id/department_name"
            />
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:orientation="horizontal"
    >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ext_num"
                android:textColor="#333"

                android:textColorHint="#666"
                android:textSize="20sp"
                android:id="@+id/office_extension" />

        </android.support.design.widget.TextInputLayout>
</LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:orientation="horizontal"
    >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mob1"
                android:textColor="#333"
                android:id="@+id/mobile1"
                android:textColorHint="#666"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>
</LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:orientation="horizontal"
    >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mob2"
                android:textColor="#333"
                android:id="@+id/mobile2"
                android:textColorHint="#666"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/w_email"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"
            android:id="@+id/work" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/work_email"
            android:textSize="20sp"
            android:textColor="#333"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/p_email"
                android:textColor="#333"
                android:id="@+id/personal_email"
                android:textColorHint="#666"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/home_phone"
                android:textColor="#333"
                android:id="@+id/home_phone"
                android:textColorHint="#666"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

           >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/social_status"
                android:id="@+id/social_status"
                android:textColor="#333"
                android:textColorHint="#666"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

               >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country"
                    android:id="@+id/country"
                    android:textColor="#333"
                    android:textColorHint="#666"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:textColor="#333"
                    android:id="@+id/city"
                    android:textColorHint="#666"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postal_code"
                    android:id="@+id/postal_code"
                    android:textColor="#333"
                    android:textColorHint="#666"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

               >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:textColor="#333"
                    android:id="@+id/address"
                    android:textColorHint="#666"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</ScrollView>
